# vulkanengine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  compile_commands.json  gen_macos.sh
.cache/clangd/index/: VkBootstrap.cpp.80950B6F8E7562A0.idx  VkBootstrap.h.712D4525A2E15716.idx  VkBootstrapDispatch.h.39A23998A92D6C6E.idx  context.hpp.067F66CE9EA184B7.idx  ds.hpp.6ADDC5D54745D7CA.idx  main.cpp.7E173843DA815964.idx  vk_mem_alloc.h.82A2AD93A0344866.idx
assets/shaders/: colored_triangle.frag  colored_triangle_mesh.vert  gradient.comp  input_structures.glsl  mesh.frag  mesh.vert  tex_image.frag
include/src/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/lib/: ds.hpp  util.hpp
src/render/: CMakeLists.txt  input.cpp  input.hpp  mesh.cpp  mesh.hpp  render.cpp  render.hpp  render_data.hpp
src/render/vk/: CMakeLists.txt  core.cpp  core.hpp  descriptor.cpp  descriptor.hpp  destroy.cpp  destroy.hpp  info.cpp  info.hpp  internal.hpp  mesh.cpp  pipeline_builder.cpp  pipeline_builder.hpp  shader.cpp  shader.hpp  types.hpp  util.hpp
src/vk/: context.cpp  context.hpp  core.cpp  core.hpp  create_info.cpp  create_info.hpp  del_queue.cpp  del_queue.hpp  descriptor.cpp  descriptor.hpp  destroy.hpp  info.cpp  info.hpp  internal.hpp  loader.cpp  loader.hpp  mesh.cpp  objects.hpp  pipeline.cpp  pipeline.hpp  pipeline_builder.cpp  pipeline_builder.hpp  types.hpp  util.cpp  util.hpp
